--- a/src/App.css
+++ b/src/App.css
@@ -6,23 +6,23 @@
   height: 250px;
   width: 250px;
   border-radius: 50%;
-  object-fit:center;
+  object-fit: center;
 }
 .usr-name {
   color: orange;
 }
 
-.particularname{
-  color:black
+.particularname {
+  color: black;
 }
 
-.user-pic{
-  height:300px;
-  width:300px;
+.user-pic {
+  height: 300px;
+  width: 300px;
   border-radius: 50%;
   object-fit: center;
 }
-.Heart{
+.Heart {
   /* height:10px; */
   /* width:20px; */
   margin: 50px;
